kubernetes/infra/adminer.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: adminer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
spec:
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
        network: data-net
    spec:
      containers:
      - name: adminer
        image: adminer
        ports:
        - containerPort: 8080
