kubernetes/infra/kong-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-gateway
spec:
  type: ClusterIP
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
    - name: admin
      port: 8001
      targetPort: 8001
  selector:
    app: kong-gateway

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-gateway

  template:
    metadata:
      labels:
        app: kong-gateway
        network: public-net

    spec:
      containers:
      - name: kong
        image: kong:3.9
        ports:
        - containerPort: 8000
          name: proxy
        - containerPort: 8001
          name: admin
        volumeMounts:
        - name: kong-config-volume
          mountPath: /etc/kong
      volumes:
      - name: kong-config-volume
        configMap:
          name: kong-config
