kubernetes/infra/portainer.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer-service
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: portainer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      serviceAccountName: portainer-sa
      containers:
      - name: portainer
        image: portainer/portainer-ce:lts
        ports:
        - containerPort: 9000
