kubernetes/infra/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  ports:
    - port: 5672
      name: amqp
    - port: 15672
      name: management
  selector:
    app: rabbitmq

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq
        network: data-net

    spec:
      containers:
      - name: rabbitmq
        image: masstransit/rabbitmq:latest
        ports:
        - containerPort: 5672
        - containerPort: 15672
